Fixes #4953 - The in drop-down menu shown group name is truncated after a...

--- a/app/assets/stylesheets/zammad.scss
+++ b/app/assets/stylesheets/zammad.scss
@@ -2,6 +2,7 @@ $high-priority-color: hsl(360, 71%, 60%);
 $low-priority-color: hsl(200, 68%, 73%);
 $minWidth: 1024px;
 $sidebarWidth: 280px;
+$desktopSidebarWidth: 360px;
 $navigationWidth: 260px;
 $mobileNavigationWidth: 50px;
 $mobileNavigationWidthOpen: 220px;
@@ -4266,6 +4267,17 @@ footer {
     min-width: $minWidth - $sidebarWidth;
   }
 
+  @include desktop {
+    @include bidi-style(
+      left,
+      $desktopSidebarWidth + $navigationWidth,
+      right,
+      0
+    );
+
+    min-width: $minWidth - $desktopSidebarWidth;
+  }
+
   &.no-sidebar {
     @include bidi-style(left, $navigationWidth, right, 0);
 
@@ -7863,6 +7875,10 @@ a.list-group-item.active > .badge,
   transition: margin-right 500ms;
 
   @include rtl(transition, margin-left 500ms);
+
+  @include desktop {
+    @include bidi-style(margin-right, $desktopSidebarWidth, margin-left, 0);
+  }
 }
 
 .tabsSidebar-sidebarSpacer.is-closed {
@@ -7884,6 +7900,10 @@ a.list-group-item.active > .badge,
   border-left: 1px solid var(--border);
   padding: 0;
   margin-bottom: 1px;
+
+  @include desktop {
+    width: $desktopSidebarWidth;
+  }
 }
 
 .tabsSidebar .sidebar > hr {
@@ -7980,6 +8000,12 @@ a.list-group-item.active > .badge,
   transform: translateX($sidebarWidth);
 
   @include rtl(transform, translateX(-$sidebarWidth));
+
+  @include desktop {
+    transform: translateX($desktopSidebarWidth);
+
+    @include rtl(transform, translateX(-$desktopSidebarWidth));
+  }
 }
 
 .tabsSidebar-tabs {
@@ -11531,6 +11557,15 @@ output {
       cursor: unset;
     }
 
+    &.is-selected {
+      @include bidi-style(
+        border-left,
+        5px solid var(--highlight),
+        border-right,
+        5px solid var(--highlight)
+      );
+    }
+
     &.js-enter:hover,
     &.js-enter.is-active {
       background: none;
@@ -11564,15 +11599,7 @@ output {
       padding: 0;
 
       span.searchableSelect-option-text {
-        @include ltr(padding, 11px 45px 11px 15px);
-        @include rtl(padding, 11px 15px 11px 45px);
-      }
-
-      span.searchableSelect-option-checkmark {
-        @include ltr(margin-left, -31px);
-        @include ltr(padding-right, 15px);
-        @include rtl(margin-right, -31px);
-        @include rtl(padding-left, 15px);
+        padding: 11px 15px;
       }
 
       span.searchableSelect-option-arrow {
@@ -11590,20 +11617,10 @@ output {
     }
 
     span.searchableSelect-option-text {
-      @include ltr(padding-right, 45px);
-      @include rtl(padding-left, 45px);
+      letter-spacing: -0.02rem;
 
       &:hover {
         background: var(--highlight);
-      }
-    }
-
-    span.searchableSelect-option-checkmark {
-      @include ltr(margin-left, -16px);
-      @include rtl(margin-right, 16px);
-
-      .icon-checkmark {
-        fill: var(--text-inverted);
       }
     }
   }
